@@ -933,21 +933,12 @@ totem_playlist_save_add_format_combo_box (GtkFileChooser *fc)
 	gtk_widget_show (hbox);
 	gtk_file_chooser_set_extra_widget (GTK_FILE_CHOOSER (fc), hbox);
 
-	atk_object = gtk_widget_get_accessible (combo_box);
-	atk_relations = atk_object_ref_relation_set
-		(gtk_widget_get_accessible (label));
-	atk_relation = atk_relation_new (&atk_object, 1,
-			ATK_RELATION_LABEL_FOR);
-	atk_relation_set_add (atk_relations, atk_relation);
-	g_object_unref (G_OBJECT (atk_relation));
-
-	atk_object = gtk_widget_get_accessible (label);
-	atk_relations = atk_object_ref_relation_set
-		(gtk_widget_get_accessible (combo_box));
-	atk_relation = atk_relation_new (&atk_object, 1,
-			ATK_RELATION_LABELLED_BY);
-	atk_relation_set_add (atk_relations, atk_relation);
-	g_object_unref (G_OBJECT (atk_relation));
+	atk_object_add_relationship (gtk_widget_get_accessible (label),
+			ATK_RELATION_LABEL_FOR,
+			gtk_widget_get_accessible (combo_box));
+	atk_object_add_relationship (gtk_widget_get_accessible (combo_box),
+			ATK_RELATION_LABELLED_BY,
+			gtk_widget_get_accessible (label));
 
 	return combo_box;
 }
