@@ -1,6 +1,11 @@
 2006-10-30  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-playlist.c: (totem_playlist_save_add_format_combo_box):
+	Simplify the relationship code, thanks Maciej
+
+2006-10-30  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-playlist.c: (totem_playlist_save_add_format_combo_box):
 	Add relationships between the "select playlist format" label and
 	combobox (Closes: #367606)
 
